--- a/package.json
+++ b/package.json
@@ -1,55 +1,64 @@
 {
   "name": "portfolio",
-  "version": "1.0.0",
-  "description": "portfolio",
+  "homepage": "https://github.com/edupanov/Portfolio",
+  "version": "0.1.0",
   "private": true,
-  "scripts": {
-    "dev": "cross-env NODE_ENV=development webpack --mode development",
-    "build": "cross-env NODE_ENV=production webpack --mode production",
-    "start": "cross-env NODE_ENV=development webpack-dev-server --mode development --open"
-  },
-  "browserslist": "> 0.25%, not dead",
-  "keywords": [
-    "js",
-    "javascript",
-    "webpack"
-  ],
-  "author": "DupanovEgor <edupanov@gmail.com>",
-  "license": "ISC",
-  "devDependencies": {
-    "@babel/core": "^7.12.0",
-    "@babel/plugin-proposal-class-properties": "^7.10.4",
-    "@babel/preset-env": "^7.12.0",
-    "@babel/preset-react": "^7.10.4",
-    "@babel/preset-typescript": "^7.12.0",
-    "babel-eslint": "^10.1.0",
-    "babel-loader": "^8.1.0",
-    "clean-webpack-plugin": "^3.0.0",
-    "copy-webpack-plugin": "^5.1.2",
-    "cross-env": "^6.0.3",
-    "css-loader": "^3.6.0",
-    "csv-loader": "^3.0.3",
-    "eslint": "^6.8.0",
-    "eslint-loader": "^3.0.4",
-    "file-loader": "^5.1.0",
-    "html-webpack-plugin": "^3.2.0",
-    "mini-css-extract-plugin": "^0.9.0",
-    "node-sass": "^4.14.1",
-    "optimize-css-assets-webpack-plugin": "^5.0.4",
-    "papaparse": "^5.3.0",
-    "sass-loader": "^8.0.2",
-    "style-loader": "^1.3.0",
-    "terser-webpack-plugin": "^2.3.8",
-    "webpack": "^4.44.2",
-    "webpack-bundle-analyzer": "^3.9.0",
-    "webpack-cli": "^3.3.12",
-    "webpack-dev-server": "^3.11.0",
-    "xml-loader": "^1.2.1"
-  },
   "dependencies": {
-    "@babel/polyfill": "^7.11.5",
-    "jquery": "^3.5.1",
-    "lodash": "^4.17.20",
-    "normalize.css": "^8.0.1"
+    "@fortawesome/fontawesome-svg-core": "^1.2.34",
+    "@fortawesome/free-brands-svg-icons": "^5.15.2",
+    "@fortawesome/free-regular-svg-icons": "^5.15.2",
+    "@fortawesome/free-solid-svg-icons": "^5.15.2",
+    "@fortawesome/react-fontawesome": "^0.1.14",
+    "@testing-library/jest-dom": "^5.11.4",
+    "@testing-library/react": "^11.1.0",
+    "@testing-library/user-event": "^12.1.10",
+    "@types/jest": "^26.0.15",
+    "@types/node": "^12.0.0",
+    "@types/react": "^16.9.53",
+    "@types/react-dom": "^16.9.8",
+    "@types/react-router-dom": "^5.1.7",
+    "@types/uuid": "^8.3.0",
+    "axios": "^0.21.1",
+    "formik": "^2.2.6",
+    "node-sass": "^4.0.0",
+    "react": "^17.0.1",
+    "react-dom": "^17.0.1",
+    "react-router-dom": "^5.2.0",
+    "react-scripts": "4.0.1",
+    "react-typing-effect": "^2.0.4",
+    "sass-loader": "^11.0.1",
+    "typescript": "^4.0.3",
+    "typewriter-effect": "^2.17.0",
+    "uuid": "^8.3.2",
+    "web-vitals": "^0.2.4"
+  },
+  "scripts": {
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test",
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
+  },
+  "eslintConfig": {
+    "extends": [
+      "react-app",
+      "react-app/jest"
+    ]
+  },
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
+  },
+  "devDependencies": {
+    "gh-pages": "^3.1.0"
   }
 }
